--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@ window.onload = wrap_img;
 <body><header class="site-header">
 
   <div class="wrapper"><a class="site-title" rel="author" href="/">Everything Technical</a>
-    <a class="site-title" href="https://www.uplandr.com">Uplandr</a><nav class="site-nav">
+    <!--
+    <a class="site-title" href="https://www.uplandr.com">Uplandr</a>
+    --><nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
@@ -79,7 +81,16 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/about/">About Me</a><a class="page-link" href="/search/">Search</a><a class="page-link" href="/categories/">Tags</a></div>
+        <div class="trigger"><a class="site-title" href="https://www.uplandr.com">Uplandr</a>
+            <!--
+            <a class="page-link" href="/about/">About Me</a>
+            --><a class="site-title" href="https://www.uplandr.com">Uplandr</a>
+            <!--
+            <a class="page-link" href="/search/">Search</a>
+            --><a class="site-title" href="https://www.uplandr.com">Uplandr</a>
+            <!--
+            <a class="page-link" href="/categories/">Tags</a>
+            --></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
