--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/about/">About Me</a><a class="page-link" href="/search/">Search</a><a class="page-link" href="/categories/">Tags</a><a class="site-title" href="https://www.uplandr.com">Uplandr</a>
+        <div class="trigger">
+          <!--<a class="page-link" href="/about/">About Me</a><a class="page-link" href="/search/">Search</a><a class="page-link" href="/categories/">Tags</a>-->
+
+          <a class="site-title" href="https://www.uplandr.com">Uplandr</a>
 
         </div>
       </nav></div>
