--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ window.onload = wrap_img;
 
   <div class="wrapper"><a class="site-title" rel="author" href="/">Everything Technical</a>
     
-    <a class="site-title" href="https://www.uplandr.com">Uplandr</a><nav class="site-nav">
+    <a class="site-title" href="https://www.uplandr.com"></a><nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
