--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@ window.onload = wrap_img;
 </head>
 <body><header class="site-header">
 
-  <div class="wrapper"><a class="site-title" rel="author" href="/">Everything Technical</a>
-    
-    <a class="site-title" href="https://www.uplandr.com"></a><nav class="site-nav">
+  <div class="wrapper"><a class="site-title" rel="author" href="/">Everything Technical</a><nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
