--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@ layout: home
 search_exclude: true
 image: images/logo.png
 ---
+The posts have technical implementation of various models with practical examples.
+
+You may browse by the [topcs of interest](https://blog.uplandr.com/categories/), or simply going over the posts below.
 
 <!-- This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
