deploy: 08e35d6508a776c4c67f2d449b22b0abc4dd7d68

--- a/page2/index.html
+++ b/page2/index.html
@@ -100,7 +100,11 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><!-- This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+        <div class="home"><p>The posts have technical implementation of various models with practical examples.</p>
+
+<p>You may browse by the <a href="https://blog.uplandr.com/categories/">topcs of interest</a>, or simply going over the posts below.</p>
+
+<!-- This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
 ![](/images/diagram.png "https://github.com/fastai/fastpages")
 
