--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@ layout: home
 search_exclude: true
 image: images/logo.png
 ---
+
+<font size="+2">
 The posts have technical implementation of various models with practical examples.
 
-You may browse by the [topcs of interest](https://blog.uplandr.com/categories/), or simply going over the posts below.
+You may browse by the [topics of interest](https://blog.uplandr.com/categories/), or simply going over the posts below.
+
+[AWS](https://blog.uplandr.com/categories/#AWS)
+
+[NVIDIA Clara for Healthcare](https://blog.uplandr.com/categories/#Nvidia%20Clara%20for%20Healthcare)
+  
+</font>
 
 <!-- This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
