--- a/index.html
+++ b/index.html
@@ -99,9 +99,16 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>The posts have technical implementation of various models with practical examples.</p>
+        <div class="home"><font size="+2">
+The posts have technical implementation of various models with practical examples.
 
-<p>You may browse by the <a href="https://blog.uplandr.com/categories/">topcs of interest</a>, or simply going over the posts below.</p>
+You may browse by the [topics of interest](https://blog.uplandr.com/categories/), or simply going over the posts below.
+
+[AWS](https://blog.uplandr.com/categories/#AWS)
+
+[NVIDIA Clara for Healthcare](https://blog.uplandr.com/categories/#Nvidia%20Clara%20for%20Healthcare)
+  
+</font>
 
 <!-- This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
