deploy: 2bf30d02d3ad0d7ce49138c16bb00101fc45c9ea

--- a/page2/index.html
+++ b/page2/index.html
@@ -100,16 +100,13 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><font size="+2">
-The posts have technical implementation of various models with practical examples.
+        <div class="home"><p>The posts have technical implementation of various models with practical examples.</p>
 
-You may browse by the [topics of interest](https://blog.uplandr.com/categories/), or simply going over the posts below.
+<p>You may browse by the <a href="https://blog.uplandr.com/categories/">topics of interest</a>, or simply going over the posts below.</p>
 
-[AWS](https://blog.uplandr.com/categories/#AWS)
+<p><a href="https://blog.uplandr.com/categories/#AWS">AWS</a></p>
 
-[NVIDIA Clara for Healthcare](https://blog.uplandr.com/categories/#Nvidia%20Clara%20for%20Healthcare)
-  
-</font>
+<p><a href="https://blog.uplandr.com/categories/#Nvidia%20Clara%20for%20Healthcare">NVIDIA Clara for Healthcare</a></p>
 
 <!-- This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
