--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@ image: images/logo.png
 
 The posts have technical implementation of various models with practical examples.
 
-You may browse by the [topics of interest](https://blog.uplandr.com/categories/), or simply going over the posts below.
+You may browse by the [topics of interest](https://blog.uplandr.com/categories/), or simply going over the posts.
+
+
+Browse by Interest Areas:
 
 [AWS](https://blog.uplandr.com/categories/#AWS)
 
