deploy: 11941520391df59c06772f6a5960946451ba1c00

--- a/page2/index.html
+++ b/page2/index.html
@@ -102,7 +102,9 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><p>The posts have technical implementation of various models with practical examples.</p>
 
-<p>You may browse by the <a href="https://blog.uplandr.com/categories/">topics of interest</a>, or simply going over the posts below.</p>
+<p>You may browse by the <a href="https://blog.uplandr.com/categories/">topics of interest</a>, or simply going over the posts.</p>
+
+<p>Browse by Interest Areas:</p>
 
 <p><a href="https://blog.uplandr.com/categories/#AWS">AWS</a></p>
 
