--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@ search_exclude: true
 image: images/logo.png
 ---
 
-The posts have technical implementation of various models with practical examples.
+The posts have technical implementation of various models with practical examples. You may browse by the [topics of interest](https://blog.uplandr.com/categories/), or simply going over the posts.
 
-You may browse by the [topics of interest](https://blog.uplandr.com/categories/), or simply going over the posts.
 
 
 Browse by Interest Areas:
