deploy: 71c97e79a5d5cbbb258a917f559fafd8beadb2c9

--- a/index.html
+++ b/index.html
@@ -99,9 +99,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>The posts have technical implementation of various models with practical examples.</p>
-
-<p>You may browse by the <a href="https://blog.uplandr.com/categories/">topics of interest</a>, or simply going over the posts.</p>
+        <div class="home"><p>The posts have technical implementation of various models with practical examples. You may browse by the <a href="https://blog.uplandr.com/categories/">topics of interest</a>, or simply going over the posts.</p>
 
 <p>Browse by Interest Areas:</p>
 
