--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ Browse by Interest Areas:
 [AWS](https://blog.uplandr.com/categories/#AWS)
 
 [NVIDIA Clara for Healthcare](https://blog.uplandr.com/categories/#Nvidia%20Clara%20for%20Healthcare)
+
+[MONAI for Healthcare](https://blog.uplandr.com/categories/#MONAI%20for%20Healthcare)
   
 
 
