deploy: aa01137af3b44d0ebb091d48a5862d3948c431d3

--- a/page2/index.html
+++ b/page2/index.html
@@ -108,6 +108,8 @@ window.onload = wrap_img;
 
 <p><a href="https://blog.uplandr.com/categories/#Nvidia%20Clara%20for%20Healthcare">NVIDIA Clara for Healthcare</a></p>
 
+<p><a href="https://blog.uplandr.com/categories/#MONAI%20for%20Healthcare">MONAI for Healthcare</a></p>
+
 <!-- This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
 ![](/images/diagram.png "https://github.com/fastai/fastpages")
