--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ Browse by Interest Areas:
 [NVIDIA Clara for Healthcare](https://blog.uplandr.com/categories/#Nvidia%20Clara%20for%20Healthcare)
 
 [MONAI for Healthcare](https://blog.uplandr.com/categories/#MONAI%20for%20Healthcare)
+
+[MLOps](https://blog.uplandr.com/categories/#MLOps)
   
 
 
