--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@ window.onload = wrap_img;
 
 <p><a href="https://blog.uplandr.com/categories/#MONAI%20for%20Healthcare">MONAI for Healthcare</a></p>
 
+<p><a href="https://blog.uplandr.com/categories/#MLOps">MLOps</a></p>
+
 <!-- This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
 ![](/images/diagram.png "https://github.com/fastai/fastpages")
